# llm-path

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
docs/: README.md  data-spec.md  req-dependency.md
docs/plans/: 1.proxy-design.md  10.refactor-cook.md  4.ui-msg-diff-plan.md  5.theme-switch-plan.md  6.req-dependency.md  7.split-thinking-msg.md  9.compat-graph.md
docs/sample_traces/: claude.json  gemini.json  openai.json
llm_path/: __init__.py  __main__.py  cli.py  cook.py  proxy.py  storage.py  viewer.py
llm_path/cook/: __init__.py  base.py  cooker.py  deduplicator.py  dependency.py  models.py
llm_path/cook/providers/: __init__.py  claude.py  gemini.py  openai.py
llm_trace/: cli.py  cook.py  models.py  proxy.py
scripts/: release.sh
specs/: requirements.md
viewer/: index.html
viewer/src/: App.tsx  index.css
viewer/src/components/detail/: MessageCard.tsx  RequestDetail.tsx  RequestHeader.tsx  ToolCard.tsx
viewer/src/components/sidebar/: RequestGraph.tsx  RequestList.tsx
viewer/src/hooks/: useDiff.ts  useTheme.ts  useTraceData.ts
viewer/src/types/: index.ts
